--- a/src/Css files/moviesearch.css
+++ b/src/Css files/moviesearch.css
@@ -1,53 +1,65 @@
-body{
-    /* background-color: #f5fffa; */
-    background-color: #d6ffeb
+body {
+  background-color: #d0bfff;
+  /* background-color: #d6ffeb; */
 }
 
-.Movie-Body{
-    height:370px;
-    width:auto;
-    padding: 60px;
-    margin: 60px;
-    display: flex;
-text-align: center;
-background-color: #F0FFF0;
-display: flex;
-justify-content: center;
-align-content: center;
+.Movie-Body {
+  height: 400px;
+  width: auto;
+  padding: 60px;
+  margin: 60px;
+  display: flex;
+  text-align: center;
+  background-color: #f1efec;
+  box-shadow: 5px 5px 10px #7848fd;
+  display: flex;
+  border-radius: 50px;
+  justify-content: center;
+  align-content: center;
+  gap: 20px;
 }
-.Description h3{
-/* text-align: start;
-font-family: sans-serif;
-font-size: xx-large; */
-padding: 10px 20px;
-font-size: 25px;
-font-weight: 600;
+.Movie-info {
+  height: 100%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
 }
-.Description p{
-font-size: larger;
-font-weight: 600;
+.image {
+  height: 400px;
+  width: 400px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 7px #adadad;
 }
 
+.Description {
+  height: 360px;
+  width: 50%;
+  text-align: start;
+  line-height: 40px;
+  background-color: #ded2ff;
+  border-radius: 50px;
+  padding: 20px;
+  box-shadow: 5px 5px 7px #adadad;
+}
 
-.image{
-    height: 371px;
-    width: 330px
+.Description p {
+  font-size: larger;
+  font-weight: 600;
+}
 
+.Btn-like {
+  height: 50px;
+  width: 100px;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  margin: 10px;
+  border-radius: 50px;
+  background-color: #7848fd;
+  color: #fff;
 }
-.Movie-info{
-    height:500px;
-    width:500px;
-    display: flex;
-    justify-content: space-between;
-}
-.Btn-like{
-    height:40px;
-    width:60px;
-    border-radius: 5px;
-    border: 1px solid #e1e1e1;
-    background: #fff;
-}
-.Btn-like:hover{
-    background-color: blue;
-    color: white;
+.Btn-like:hover {
+  background-color: blue;
+  color: white;
 }
