--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.unlike{
-  background-color: red;
+.unlike {
+  height: 50px;
+  width: 100px;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  margin: 10px;
+  border-radius: 50px;
+  background-color: #7848fd;
+  color: #fff;
 }
-/* .like{
-  background-color: black !important;
-} */
+
+.unlike:hover {
+  background-color: #ff4646;
+  color: white;
+}
