--- a/src/navbar.css
+++ b/src/navbar.css
@@ -5,6 +5,7 @@ body {
 
 .Nav {
   padding: 20px;
+
   background-color: black;
   display: flex;
   justify-content: center;
@@ -12,11 +13,12 @@ body {
   flex-direction: row;
 }
 .Search input {
-  width: 450px;
-  height: 50px;
+  border-radius: 50px;
+  width: 500px;
+  height: 30px;
+  padding: 8px 20px;
   font-family: sans-serif;
   font-size: 22px;
-
   margin: 0px;
 }
 
@@ -25,12 +27,13 @@ body {
   width: 200px;
 }
 .Btn button {
-  height: 48px;
+  height: 50px;
   width: 100px;
-
   text-align: center;
   font-family: sans-serif;
+  font-weight: 700;
   font-size: 15px;
   margin: 10px;
+  border-radius: 50px;
   background-color: #f2711c;
 }
